--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.30MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-3.36MB/s(Youtube:不良林), server: lsj03.wangxd.life, port: 3052, type: trojan, password: ae71ffdc-3206-3b4d-3f4e-e3b63684a556, sni: lsj03.wangxd.life, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-180.3KB/s(Youtube:不良林), server: 213.183.59.229, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
-  - {name: 🇨🇳 中国-21.30MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16040, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇯🇵 日本-2.43MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林), server: 185.167.116.252, port: 9097, type: ss, cipher: aes-256-cfb, password: Sn5B7jTqr76aCJT8}
-  - {name: 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林), server: 185.167.116.252, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇸🇬 新加坡-398.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: bai-piao-wang-zhe-iplc.98848.xyz, port: 443, type: trojan, password: a97edd5e-f9c9-4320-a8aa-753dd99d74d4, sni: bai-piao-wang-zhe-iplc.98848.xyz, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.14MB/s(Youtube:不良林), server: 103.172.116.9, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇺🇸 美国-8.98MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-162.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇩🇪 德国-3.19MB/s(Youtube:不良林), server: 5.183.179.139, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
+  - {name: 🇩🇪 德国-3.27MB/s(Youtube:不良林), server: 5.183.179.139, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
+  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: 185.167.116.252, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2, server: 185.167.116.252, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-180.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-21.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-180.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-21.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-180.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-21.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-180.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-21.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-180.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-21.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-180.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-21.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.30MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.36MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-180.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-21.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.63MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.99MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.48MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
+      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
