--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-7.79MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: bwg.sulink.cn, port: 444, type: trojan, password: kLbgFTbFYm, sni: bwg.sulink.cn, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-3.76MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
   - {name: 🇸🇬 新加坡-398.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇺🇸 美国-4.61MB/s(Youtube:不良林), server: fhcarm2.gaox.ml, port: 443, type: trojan, password: f39bd244-f5fe-415c-8b98-a1e5250bf178, sni: fhcarm2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.14MB/s(Youtube:不良林), server: 103.172.116.9, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇺🇸 美国-8.98MB/s(Youtube:不良林), server: kr01.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr01.wangxd.life, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-162.8KB/s(Youtube:不良林), server: 103.172.116.9, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇨🇳 中国-198.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
   - {name: 🇩🇪 德国-3.19MB/s(Youtube:不良林), server: 5.183.179.139, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
   - {name: 🇩🇪 德国-3.27MB/s(Youtube:不良林), server: 5.183.179.139, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
   - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.61MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.14MB/s(Youtube:不良林)
-      - 🇺🇸 美国-8.98MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-162.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
       - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
       - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
