--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.79MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: bwg.sulink.cn, port: 444, type: trojan, password: kLbgFTbFYm, sni: bwg.sulink.cn, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-3.76MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
-  - {name: 🇸🇬 新加坡-398.3KB/s(Youtube:不良林), server: 103.172.116.9, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
-  - {name: 🇨🇳 中国-198.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇩🇪 德国-3.19MB/s(Youtube:不良林), server: 5.183.179.139, port: 9088, type: ss, cipher: aes-256-cfb, password: f8npKgNzdkss2ytn}
-  - {name: 🇩🇪 德国-3.27MB/s(Youtube:不良林), server: 5.183.179.139, port: 9010, type: ss, cipher: aes-256-cfb, password: f63gg8EruDnUrmz4}
-  - {name: 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林), server: 185.167.116.252, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: 185.167.116.252, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
-  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2, server: 185.167.116.252, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇳 中国-3.25MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林), server: 185.167.116.252, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇨🇳 中国-1.62MB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-2.84MB/s(Youtube:不良林), server: cm.cheapv2.xyz, port: 26618, type: vmess, uuid: 34066f13-5ea6-3bee-a6a5-bfe7c6c772a9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: cm.cheapv2.xyz}}
+  - {name: 🇺🇸 美国-5.18MB/s(Youtube:不良林), server: lsj03.wangxd.life, port: 3052, type: trojan, password: ae71ffdc-3206-3b4d-3f4e-e3b63684a556, sni: lsj03.wangxd.life, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.61MB/s(Youtube:不良林), server: 103.172.116.9, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
+  - {name: 🇸🇬 新加坡-854.4KB/s(Youtube:不良林), server: 103.172.116.9, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
+  - {name: 🇯🇵 日本-1.68MB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.34MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-402.9KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-854.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-854.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-854.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-854.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-854.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-854.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-3.76MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-398.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-198.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.27MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林) 2
+      - 🇨🇳 中国-3.25MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-153.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.18MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.61MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-854.4KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.68MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-402.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
